--- a/index.html
+++ b/index.html
@@ -12,69 +12,97 @@
   <div class="fond">
     <div class="game-area d-grid container-fluid text-center">
       <div class="row h-50 justify-content-center">
-        <div class="col-4 col-md-2">
-          <div class="btn-game">
-            <button>
+        <div class="col-4">
+            <button class="fs-6 btn-game">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewbox="0 0 16 16">
-                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+                <g class="color-theme">
+                  <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                  <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+                </g>
               </svg>
               NEW GAME</button>
-          </div>
         </div>
       </div>
       <div class="row mt-3 mb-1 h-50 justify-content-center">
-        <div class="col-4  name-player">PLAYER1</div>
-        <div class="col-4   col-md-2 name-player">(vide)</div>     <!--peut-être à supprimer-->
-        <div class="col-4   name-player">PLAYER2</div>
+        <div class="position-relative col-4 name-player fs-3">PLAYER1
+          <div id="dotPlayer1" class="position-absolute top-50 start-100 translate-middle pe-0 pe-sm-5">
+            <g class="color-theme">        
+              <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-dot" viewbox="0 0 16 16">
+                <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"/>
+              </svg>
+            </g>
+          </div>
+        </div>
+        <div class="col-4 name-player"></div> 
+        <div class="position-relative col-4 name-player fs-3">PLAYER2
+          <div id="dotPlayer2" class="position-absolute top-50 start-0 translate-middle">
+            <g class="color-theme">        
+              <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-dot" viewbox="0 0 16 16">
+                <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"/>
+              </svg>
+            </g>
+          </div>
+        </div>
       </div>
       <div class="row my-1 justify-content-center">
-        <div class="col-4 name-player">Score PLAYER1</div>
-        <div class="position-relative col-4 col-md-2 name-player">
+        <div class="col-4 color-theme name-player fs-1">43</div>
+        <div class="position-relative col-4 col-sm-2 name-player">
+          <div class="position-absolute top-50 start-50 translate-middle shadow">
+            <g class="color-theme">
+            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-dice-1" viewbox="0 0 16 16">
+              <circle cx="8" cy="8" r="1.5"/>
+            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-dice-2" viewbox="0 0 16 16">
+              <path d="M5.5 4a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm8 8a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
+            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-dice-3" viewbox="0 0 16 16">
+              <path d="M5.5 4a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm8 8a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm-4-4a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
+            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-dice-4" viewbox="0 0 16 16">
+              <path d="M5.5 4a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm8 0a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0 8a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm-8 0a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
+            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-dice-5" viewbox="0 0 16 16">
+              <path d="M5.5 4a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm8 0a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0 8a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm-8 0a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm4-4a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
+            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-dice-6" viewbox="0 0 16 16">
+              <path d="M5.5 4a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm8 0a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0 8a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-4a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm-8 4a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-4a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
+            </svg>
+            </g>
+          </div>
         </div>
-        <div class="col-4 name-player">Score PLAYER2</div>
+        <div class="color-theme col-4 name-player fs-1">72</div>
       </div>
       <div class="row mb-5 min-vh-50 justify-content-center dble-line">
         <div class="col-4 name-player">courant PLAYER1</div>
-        
-        <div class="container position-relative col-4 col-md-2 name-player">
-          <div class="row justify-content-center dble-line">
-            <div class="d-flex flex-column justify-content-between">
-                <div class="btn-game">
-                  <button>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-repeat" viewbox="0 0 16 16">
+        <div class="col-4">
+          <div class="container position-relative name-player p-0">
+            <div class="row justify-content-center dble-line">
+              <div class="d-flex flex-column justify-content-between">
+                <button class="fs-6 btn-game">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-repeat" viewbox="0 0 16 16">
+                    <g class="color-theme">
                       <path d="M11.534 7h3.932a.25.25 0 0 1 .192.41l-1.966 2.36a.25.25 0 0 1-.384 0l-1.966-2.36a.25.25 0 0 1 .192-.41zm-11 2h3.932a.25.25 0 0 0 .192-.41L2.692 6.23a.25.25 0 0 0-.384 0L.342 8.59A.25.25 0 0 0 .534 9z"/>
-                      <path fill-rule="evenodd" d="M8 3c-1.552 0-2.94.707-3.857 1.818a.5.5 0 1 1-.771-.636A6.002 6.002 0 0 1 13.917 7H12.9A5.002 5.002 0 0 0 8 3zM3.1 9a5.002 5.002 0 0 0 8.757 2.182.5.5 0 1 1 .771.636A6.002 6.002 0 0 1 2.083 9H3.1z"/>
-                    </svg>
-                    ROLL DICE</button>
-                </div>            
+                    <path fill-rule="evenodd" d="M8 3c-1.552 0-2.94.707-3.857 1.818a.5.5 0 1 1-.771-.636A6.002 6.002 0 0 1 13.917 7H12.9A5.002 5.002 0 0 0 8 3zM3.1 9a5.002 5.002 0 0 0 8.757 2.182.5.5 0 1 1 .771.636A6.002 6.002 0 0 1 2.083 9H3.1z"/>
+                    </g>
+                  </svg>
+                  ROLL DICE</button>
                 <div class="position-absolute bottom-0 start-50 translate-middle-x btn-game">
-                  <button>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-in-down" viewbox="0 0 16 16">
+                  <button class="fs-6 btn-game">
+                    <svg xmlns="http://www.w3.org/2000/svg"  width="16" height="16" fill="currentColor" class="bi bi-box-arrow-in-down" viewbox="0 0 16 16">
+                      <g class="color-theme">
                       <path fill-rule="evenodd" d="M3.5 6a.5.5 0 0 0-.5.5v8a.5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5v-8a.5.5 0 0 0-.5-.5h-2a.5.5 0 0 1 0-1h2A1.5 1.5 0 0 1 14 6.5v8a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 14.5v-8A1.5 1.5 0 0 1 3.5 5h2a.5.5 0 0 1 0 1h-2z"/>
                       <path fill-rule="evenodd" d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+                    </g>
                     </svg>
                     HOLD</button>
                 </div>
               </div>
             </div>
           </div>        
-        <div class="col-4 name-player">courant PLAYER2</div>
+        </div>
+      <div class="col-4 name-player">courant PLAYER2</div>
       </div>
     </div>
   </div>
 </body>
 </html>
-
-<!--div class="row min-vh-50 justify-content-center linex">
-  <div class="col-4 name-player">courant PLAYER1</div>
-  <div class="position-relative col-4 col-md-2 name-player">
-      <div class="btn-game">
-        <button>ROLL DICE</button>
-      </div>            
-      <div class="position-absolute bottom-0 start-50 translate-middle-x btn-game">
-        <button>HOLD</button>
-      </div>
-  </div>
-  <div class="col-4 name-player">courant PLAYER2</div>
-</div-->
