--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="position-relative game-area d-grid container-fluid text-center">
       <div class="row h-50 justify-content-center align-items-center bg-transparent">
         <div class="col-4">
-            <button class="fs-6 btn-game">
+            <button id="btn-newgame" class="fs-6 btn-game">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewbox="0 0 16 16">
                 <g class="color-theme">
                   <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
@@ -24,7 +24,7 @@
         </div>
       </div>
       <div class="row mt-3 mb-1 h-50  justify-content-center align-items-end">
-        <div class="position-relative col-4 name-player fs-3">PLAYER1
+        <div id="namePlayer1" class="position-relative col-4 name-player fs-3">PLAYER1
           <div id="dotPlayer1" class="position-absolute top-50 start-100 translate-middle pe-0 pe-sm-5">
             <g class="color-theme">        
               <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-dot" viewbox="0 0 16 16">
@@ -34,7 +34,7 @@
           </div>
         </div>
         <div class="col-4"></div> 
-        <div class="position-relative col-4 name-player fs-3">PLAYER2
+        <div id="namePlayer2" class="position-relative col-4 name-player fs-3">PLAYER2
           <div id="dotPlayer2" class="position-absolute top-50 start-0 translate-middle">
             <g class="color-theme">        
               <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-dot" viewbox="0 0 16 16">
@@ -45,7 +45,7 @@
         </div>
       </div>
       <div class="row my-1 justify-content-center align-items-start">
-        <div class="col-4 color-theme point">43</div>
+        <div id="score1" class="col-4 color-theme point">0</div>
         <div class="position-relative col-4">
           <div class="position-absolute top-0 start-50 translate-middle-x shadow">
             <g class="color-theme">
@@ -70,7 +70,7 @@
             </g>
           </div>
         </div>
-        <div class="color-theme col-4 point">72</div>
+        <div id="score2" class="color-theme col-4 point">0</div>
       </div>
 
       <div class="row mt-5 justify-content-center dble-line">
@@ -78,7 +78,7 @@
           <div class="row justify-content-evenly dble-line">
             <div class="col-4 counter counter-title">CURRENT</div>
             <div class="col-4">
-              <button class="fs-6 btn-game">
+              <button id="btn-roll" class="fs-6 btn-game">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-repeat" viewbox="0 0 16 16">
                   <g class="color-theme">
                     <path d="M11.534 7h3.932a.25.25 0 0 1 .192.41l-1.966 2.36a.25.25 0 0 1-.384 0l-1.966-2.36a.25.25 0 0 1 .192-.41zm-11 2h3.932a.25.25 0 0 0 .192-.41L2.692 6.23a.25.25 0 0 0-.384 0L.342 8.59A.25.25 0 0 0 .534 9z"/>
@@ -91,9 +91,9 @@
             <div class="col-4 counter counter-title">CURRENT</div>
           </div>
           <div class="row mt-0 mb-5 justify-content-evenly dble-line">
-            <div class="col-4 counter counter-pt">11</div>
+            <div id="current1" class="col-4 counter counter-pt">0</div>
             <div class="position-relative col-4">
-              <button class="fs-6 position-absolute bottom-0 start-50 translate-middle-x  btn-game">
+              <button id="btn-hold" class="fs-6 position-absolute bottom-0 start-50 translate-middle-x  btn-game">
                 <svg xmlns="http://www.w3.org/2000/svg"  width="16" height="16" fill="currentColor" class="bi bi-box-arrow-in-down" viewbox="0 0 16 16">
                   <g class="color-theme">
                   <path fill-rule="evenodd" d="M3.5 6a.5.5 0 0 0-.5.5v8a.5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5v-8a.5.5 0 0 0-.5-.5h-2a.5.5 0 0 1 0-1h2A1.5 1.5 0 0 1 14 6.5v8a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 14.5v-8A1.5 1.5 0 0 1 3.5 5h2a.5.5 0 0 1 0 1h-2z"/>
@@ -103,12 +103,14 @@
                 HOLD
               </button>
             </div>
-            <div class="col-4 counter counter-pt">0</div>
+            <div id="current2" class="col-4 counter counter-pt">0</div>
           </div>
         </div>
       </div>
     </div>
   </div>
+  <script src="script.js"></script>
+
 </body>
 </html>
 
