--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         </div>
       </div>
       <div class="row mt-3 mb-1 h-50  justify-content-center align-items-end">
-        <div id="namePlayer1" class="position-relative col-4 name-player fs-3">PLAYER1
+        <div class="position-relative col-4 fs-3">
+          <input type="text" id="namePlayer1" class="name-player" name="name" value="PLAYER 1" maxlength="10" size="12">
           <div id="dotPlayer1" class="position-absolute top-50 start-100 translate-middle pe-0 pe-sm-5">
             <g class="color-theme">        
               <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-dot" viewbox="0 0 16 16">
@@ -34,7 +35,8 @@
           </div>
         </div>
         <div class="col-4"></div> 
-        <div id="namePlayer2" class="position-relative col-4 name-player fs-3">PLAYER2
+        <div class="position-relative col-4 fs-3">
+          <input type="text" id="namePlayer2" class="name-player" name="name" value="PLAYER 2" maxlength="10" size="12">
           <div id="dotPlayer2" class="position-absolute top-50 start-0 translate-middle">
             <g class="color-theme">        
               <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-dot" viewbox="0 0 16 16">
@@ -49,28 +51,30 @@
         <div class="position-relative col-4">
           <div class="position-absolute top-0 start-50 translate-middle-x shadow">
             <g class="color-theme">
-            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-dice-1" viewbox="0 0 16 16">
+            <svg xmlns="http://www.w3.org/2000/svg" width="75" height="75" fill="currentColor" class="bi bi-dice-1 dice" viewbox="0 0 16 16">
               <circle cx="8" cy="8" r="1.5"/>
             </svg>
-            <svg xmlns="http://www.w3.org/2000/svg" width="75" height="75" fill="currentColor" class="bi bi-dice-2" viewbox="0 0 16 16">
+            <svg xmlns="http://www.w3.org/2000/svg" width="75" height="75" fill="currentColor" class="bi bi-dice-2 dice" viewbox="0 0 16 16">
               <path d="M5.5 4a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm8 8a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
             </svg>
-            <svg xmlns="http://www.w3.org/2000/svg" width="75" height="75" fill="currentColor" class="bi bi-dice-3" viewbox="0 0 16 16">
+            <svg xmlns="http://www.w3.org/2000/svg" width="75" height="75" fill="currentColor" class="bi bi-dice-3 dice" viewbox="0 0 16 16">
               <path d="M5.5 4a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm8 8a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm-4-4a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
             </svg>
-            <svg xmlns="http://www.w3.org/2000/svg" width="75" height="75" fill="currentColor" class="bi bi-dice-4" viewbox="0 0 16 16">
+            <svg xmlns="http://www.w3.org/2000/svg" width="75" height="75" fill="currentColor" class="bi bi-dice-4 dice" viewbox="0 0 16 16">
               <path d="M5.5 4a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm8 0a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0 8a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm-8 0a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
             </svg>
-            <svg xmlns="http://www.w3.org/2000/svg" width="75" height="75" fill="currentColor" class="bi bi-dice-5" viewbox="0 0 16 16">
+            <svg xmlns="http://www.w3.org/2000/svg" width="75" height="75" fill="currentColor" class="bi bi-dice-5 dice" viewbox="0 0 16 16">
               <path d="M5.5 4a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm8 0a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0 8a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm-8 0a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm4-4a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
             </svg>
-            <svg xmlns="http://www.w3.org/2000/svg" width="75" height="75" fill="currentColor" class="bi bi-dice-6" viewbox="0 0 16 16">
+            <svg xmlns="http://www.w3.org/2000/svg" width="75" height="75" fill="currentColor" class="bi bi-dice-6 dice" viewbox="0 0 16 16">
               <path d="M5.5 4a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm8 0a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0 8a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-4a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm-8 4a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-4a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
             </svg>
             </g>
           </div>
         </div>
-        <div id="score2" class="color-theme col-4 point">0</div>
+        <div class="color-theme col-4 point">
+          <p id="score2">0</p>
+        </div>
       </div>
 
       <div class="row mt-5 justify-content-center dble-line">
@@ -110,17 +114,5 @@
     </div>
   </div>
   <script src="script.js"></script>
-
 </body>
 </html>
-
-
-<!--div class="position-absolute top-0 start-0">
-  <div class="container h-100 w-100 ">
-    <div class="row">
-      <div class="col-6 bkg-grey">
-        TEXTE
-      </div>
-    </div>
-  </div>
-</div-->
